fixing the contact form on mobile response

--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -54,6 +54,7 @@
   .contact-us {
     width: auto;
     height: auto;
+    margin: 20px auto;
   }
 
   form#contactForm {
@@ -62,7 +63,7 @@
 
   .footer {
     background-color: transparent;
-    margin-top: 35px;
+    margin: 20px;
     height: auto;
   }
 
